recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:6: error: value avance is not a member of Int
possible cause: maybe a semicolon is missing before `value avance'?
  avance(100)
  ^FourSquare:7: error: not found: value droit
  droit(angle)
  ^FourSquare:9: error: not found: value droit
  droit(angle)
  ^FourSquare:11: error: not found: value droit
  droit(angle)
  ^